--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,5 +1,5 @@
 <!-- Content page -->
-	<section class="bgwhite p-t-55 p-b-65">
+	<section class="bgwhite p-t-55 p-b-65" id="storeSection">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6 col-md-4 col-lg-3 p-b-50">
@@ -178,11 +178,11 @@
 
 								<div class="block2-txt p-t-20">
 									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-										Herschel supply co 25l
+										911 Help Now Alert 
 									</a>
 
 									<span class="block2-price m-text6 p-r-5">
-										$75.00
+										$89.95
 									</span>
 								</div>
 							</div>
@@ -211,7 +211,7 @@
 
 								<div class="block2-txt p-t-20">
 									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-										Denim jacket blue
+										911 Help Now Alert
 									</a>
 
 									<span class="block2-price m-text6 p-r-5">
@@ -244,7 +244,7 @@
 
 								<div class="block2-txt p-t-20">
 									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-										Coach slim easton black
+										911 Help Now Alert
 									</a>
 
 									<span class="block2-price m-text6 p-r-5">
@@ -277,7 +277,7 @@
 
 								<div class="block2-txt p-t-20">
 									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-										Frayed denim shorts
+									911 Help Now Alert
 									</a>
 
 									<span class="block2-oldprice m-text7 p-r-5">
@@ -314,7 +314,7 @@
 
 								<div class="block2-txt p-t-20">
 									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-										Herschel supply co 25l
+										911 Help Now Alert
 									</a>
 
 									<span class="block2-price m-text6 p-r-5">
@@ -347,7 +347,7 @@
 
 								<div class="block2-txt p-t-20">
 									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-										Denim jacket blue
+										911 Help Now Alert
 									</a>
 
 									<span class="block2-price m-text6 p-r-5">
@@ -380,7 +380,7 @@
 
 								<div class="block2-txt p-t-20">
 									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-										Herschel supply co 25l
+										911 Help Now Alert
 									</a>
 
 									<span class="block2-price m-text6 p-r-5">
@@ -413,7 +413,7 @@
 
 								<div class="block2-txt p-t-20">
 									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-										Denim jacket blue
+										911 Help Now Alert
 									</a>
 
 									<span class="block2-price m-text6 p-r-5">
@@ -446,7 +446,7 @@
 
 								<div class="block2-txt p-t-20">
 									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-										Coach slim easton black
+										911 Help Now Alert
 									</a>
 
 									<span class="block2-price m-text6 p-r-5">
@@ -479,7 +479,7 @@
 
 								<div class="block2-txt p-t-20">
 									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-										Frayed denim shorts
+										911 Help Now Alert
 									</a>
 
 									<span class="block2-oldprice m-text7 p-r-5">
@@ -516,7 +516,7 @@
 
 								<div class="block2-txt p-t-20">
 									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-										Herschel supply co 25l
+										911 Help Now Alert
 									</a>
 
 									<span class="block2-price m-text6 p-r-5">
@@ -549,7 +549,7 @@
 
 								<div class="block2-txt p-t-20">
 									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-										Denim jacket blue
+										911 Help Now Alert
 									</a>
 
 									<span class="block2-price m-text6 p-r-5">
