--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,49 +1,5 @@
 <header class="header">
-  <app-navbar>
-    <ul class="navbar-nav ml-auto">
-      <!-- Link-->
-      <li class="nav-item">
-        <a routerLink="/home" routerLinkActive="active" href="" class="nav-link"
-          >Home</a
-        >
-      </li>
-      <!-- Link-->
-      <li class="nav-item">
-        <a href="" routerLink="/faq" routerLinkActive="active" class="nav-link"
-          >FAQ</a
-        >
-      </li>
-      <!-- Link-->
-      <li class="nav-item">
-        <a
-          href=""
-          routerLink="/contact"
-          routerLinkActive="active"
-          class="nav-link"
-          >Contact</a
-        >
-      </li>
-      <!-- Link-->
-      <li class="nav-item">
-        <a
-          href=""
-          routerLink="/about"
-          routerLinkActive="active"
-          class="nav-link"
-          >About</a
-        >
-      </li>
-      <li class="nav-item">
-        <a
-          id="pages"
-          routerLink="/store"
-          routerLinkActive="active"
-          class="nav-link"
-          >Shop</a
-        >
-      </li>
-    </ul>
-  </app-navbar>
+  <app-navbar></app-navbar>
 </header>
 
 <router-outlet></router-outlet>
