--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     <div class="row align-items-center justify-content-center">
       <div class="col-lg-6">
         <h1
-          class="hero-heading text-uppercase text-center mb-0 animated"
+          class="hero-heading text-uppercase text-center mb-0 animate"
           data-aos="fade-up"
         >
           TeleCare.<br />
@@ -14,7 +14,7 @@
         <div class="row">
           <div class="col-lg-12">
             <p
-              class="lead text-center mt-4 mb-4 animated"
+              class="lead text-center mt-4 mb-4 animate"
               data-aos="fade-right"
               data-aos-delay=".5"
             >
@@ -57,7 +57,7 @@
     </div>
     <div class="row">
       <div
-        class="card col-lg-4 col-md-12 mt-5 card animated"
+        class="card col-lg-4 col-md-12 mt-5 card animate"
         data-aos="fade-up"
       >
         <img
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div
-        class="card col-lg-4 col-md-12 mt-5 card animated"
+        class="card col-lg-4 col-md-12 mt-5 card animate"
         data-aos="fade-up"
       >
         <img
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div
-        class="card col-lg-4 col-md-12 mt-5 card animated"
+        class="card col-lg-4 col-md-12 mt-5 card animate"
         data-aos="fade-up"
       >
         <img
